apps/tencentcloud/jenkins/post/_base/policies/tests/replace-internal-registry/patched-existing-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-existing-secret
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: cr-qcloud.pingcap.net/mirrors/internal/test/jenkins/centos7:cached
  imagePullSecrets:
    - name: ci-registry-auth
    - name: custom-registry-auth
