apps/tencentcloud/jenkins/post/_base/policies/tests/replace-internal-registry/resource-ci-registry-auth.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-ci-registry-auth
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: us-docker.pkg.dev/pingcap-testing-account/internal/test/jenkins/centos7:cached
  imagePullSecrets:
    - name: ci-registry-auth
