apps/tencentcloud/jenkins/post/_base/policies/tests/replace-internal-registry/resource-non-matching.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-non-matching
  namespace: jenkins-tidb
  labels:
    kubernetes.jenkins.io/controller: ""
spec:
  containers:
    - name: utils
      image: us-docker.pkg.dev/pingcap-testing-account/hub/pingcap/tidb:v8.5.0
